[Refactor] BaseEntity 추가 : User 생성 시간, 수정 시간 공통 처리 / 기타 코드 정리